# ExoNova-Backend

./: .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: ci-ci.yml
models/: MAutoencoder.pkl  model_metadata.pkl  preview.pkl  shap_explainer.pkl
src/: main.py
src/api/routes/: __init__.py  health.py  live_preview.py  tabular.py
src/api/schemas/: __init__.py  base.py  errors.py  live_preview.py  tabular.py
src/ml/: predictor.py  tabular_classifier.py
src/utils/: __init__.py  error_handlers.py  exceptions.py  request_utils.py
