[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Exoplanet Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "shap>=0.48.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
]
